Bugs/68430 68429 mobile sticky filters and product variant image switch fixes (#312)
* Fix Facets sticky issue

Show the selection section on mobile to prevent a weird gap when it is empty
Fix default height of the section
removed unnecessary bottom margin

* Fix page flicker on Kva color change

Hide mobile-carousel-thumbnails when empty (was causing a height shift at certain times)
Fixed height of image container in mobile to compensate for times when javascript is not fast enough to hide and show the variant images simultaneously
Fixed the title so that is is not continuously rendered
Used proper H1 for the title instead of a span with a class

* Fix Product gallery height with carousel

Fix product Image Gallery height if a carousel is present

* Fix KVAs not remaining selected in the UI

Added an update tracker to re-render the kva buttons when they are selected

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Blades/ProductDetail/_product-details.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Blades/ProductDetail/_product-details.scss
@@ -1,3 +1,12 @@
+#product-gallery {
+    @include media-breakpoint-down(sm) {
+        height: 122vw;
+        &.mobile-carousel-container {
+            height: 94vw;
+        }
+    }
+}
+
 .product-details {
     .add-to-wishlist {
         position: absolute;
